[metadata]
name = imageseg
version = 0.2
author = J Mackrory
description = Semantic Segmentation based off PDSG Mar 2019

[options]
install_requires =
    pandas
    numpy
    tensorflow
    matplotlib
    scikit-learn
    tqdm==4.64.1
    line_profiler
    jsonlines

package_dir =
    =src

[options.packages.find]
where=src